Added divider at the footer

--- a/index.html
+++ b/index.html
@@ -194,5 +194,14 @@
         </div>
       </div>
     </section>
+
+    <section id="divider">
+      <div class="container mx-auto py-[6rem]">
+        <hr class="text-gray w-[1024px] text-center mx-auto">
+      </div>
+    </section>
+
+    <!-- Footer -->
+    
   </body>
 </html>
