--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@
     </section>
 
     <!-- Footer -->
+    <footer class="pb-[10rem]">
+      <div class="container mx-auto flex align-middle justify-center flex-col h-auto">
+        <h1 class="text-white text-[5rem] font-bold mx-auto">Let's Connect</h1>
+        <p class="text-gray text-xl font-thin mx-auto mt-2"> Got any opportunities? or just <span class="text-yellowish underline"> say hi</span> 👋</p>
+      </div>
+      <div class="container mx-auto flex align-middle justify-center mt-14 space-x-6">
+        <img src="Assets/linkedin.svg" alt="Linkedin">
+        <img src="Assets/github.svg" alt="Github">
+        <img src="Assets/twitter.svg" alt="Twitter">
+        <img src="Assets/insta.svg" alt="Instagram">
+        <img src="Assets/blog.svg" alt="Blog">
+      </div>
+    </footer>
     
   </body>
 </html>
