Worked on other pages

--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Derrick Amenuveve</title>
+    <title>Derrick Amenuve</title>
   </head>
   <body class="font-poppins bg-dark">
     <!-- Navbar -->
     <nav
-      class="bg-dark mx-auto text-white flex justify-between px-[25rem] py-8 items-center"
-    >
+      class="bg-dark mx-auto text-white flex justify-between px-[25rem] py-8 items-center">
       <div id="logo" class="font-semibold text-3xl cursor-pointer">
-        Derrick Amenuveve
+        Derrick Amenuve
       </div>
       <div id="menu" class="text-xl space-x-5">
-        <a href="" class="font-extralight hover:text-yellowish">About</a>
-        <a href="" class="font-extralight hover:text-yellowish">Works</a>
+        <a href="about.html" class="font-extralight hover:text-yellowish">About</a>
+        <a href="works.html" class="font-extralight hover:text-yellowish">Works</a>
         <a href="" class="font-extralight hover:text-yellowish">Teaching</a>
         <a href="" class="font-extralight hover:text-yellowish">Contact</a>
       </div>
@@ -49,8 +48,8 @@
     <!-- Arrow -->
     <section id="arrow-down ">
       <div class="flex items-center justify-center mt-10">
-        <img src="Assets/arrow.svg" alt="Arrow Down Button" />
-      </div>
+       <a href="#move"> <img src="Assets/arrow.svg" alt="Arrow Down Button" />
+      </div></a>
     </section>
 
     <!-- Works -->
@@ -81,7 +80,7 @@
 
 
 
-        <div id="card" class="mx-auto container w-[1050px] mb-[5rem]">
+        <div id="move" class="mx-auto container w-[1050px] mb-[5rem]">
           <img src="Assets/afrikrea.png" alt="Marble" />
           <div id="card-details" class="mt-9">
             <p class="text-xl font-thin mb-3 text-gray">
@@ -204,10 +203,10 @@
     <!-- Footer -->
     <footer class="pb-[10rem]">
       <div class="container mx-auto flex align-middle justify-center flex-col h-auto">
-        <h1 class="text-white text-[5rem] font-bold mx-auto">Let's Connect</h1>
+        <h1 class="text-white text-[4.5rem] font-bold mx-auto">Let's Connect</h1>
         <p class="text-gray text-xl font-thin mx-auto mt-2"> Got any opportunities? or just <span class="text-yellowish underline"> say hi</span> 👋</p>
       </div>
-      <div class="container mx-auto flex align-middle justify-center mt-14 space-x-6">
+      <div class="container mx-auto flex align-middle justify-center mt-14 space-x-6 cursor-pointer">
         <img src="Assets/linkedin.svg" alt="Linkedin">
         <img src="Assets/github.svg" alt="Github">
         <img src="Assets/twitter.svg" alt="Twitter">
