Completed Desktop Versions

--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
       class="bg-dark mx-auto text-white flex justify-between px-[25rem] py-8 items-center"
     >
       <div id="logo" class="font-semibold text-3xl cursor-pointer">
-        Derrick Amenuve
+        <a href="index.html">Derrick Amenuve</a>
       </div>
       <div id="menu" class="text-xl space-x-5">
-        <a href="about.html" class="font-extralight hover:text-yellowish"
+        <a href="about.html" class="font-extralight hover:text-yellowish visited:text-yellowish"
           >About</a
         >
         <a href="works.html" class="font-extralight hover:text-yellowish"
@@ -38,12 +38,13 @@
     </nav>
 
     <section id="bio">
-      <div class="container mx-auto pl-12 pt-16">
-        <h1 class="text-white text-[3rem] font-bold">Derrick Amenuve</h1>
-        <span class="text-gray text-xl font-extralight"
-          >UX/Digital Product Designer based in Accra, Ghana.</span
+      <div class="container mx-auto pt-[8rem]">
+        <div>
+          <img class="mx-auto" src="Assets/about.png" alt="About Image" />
+        </div>
+        <div
+          class="text-white w-[1000px] text-xl pt-10 leading-7 font-thin mx-auto"
         >
-        <div class="text-white w-[999px] text-xl pt-6 leading-7 font-thin">
           <p>
             I’ve spent the last 4+ years creating human-centred user interfaces
             and experiences across e-Commerce/Marketplace, Prop-tech, Edtech and
@@ -55,7 +56,6 @@
             people from 10 + countries with a shared goal of creating the best
             experience for the end users and achieving business goals.
           </p>
-          <br />
           <p>
             Some of the clients I've worked with include: Marbleflows, Anka,
             Kauri, Fleri health, Kaizenhd, Azone, Afiewura and Suku technologies
@@ -71,7 +71,7 @@
     </section>
 
     <section class="pt-[6rem]">
-      <div class="container ml-[25rem] bg-yellowish p-[4rem] max-w-[999px]">
+      <div class="container mx-auto bg-white p-[4rem] max-w-[1000px]">
         <p class="text-xl font-semibold leading-8">
           I thought I will be an Electrical Engineer👷🏾‍♂️ helping generate power to
           the national grid. After graduation I was a Research and teaching
@@ -83,6 +83,119 @@
       </div>
     </section>
 
-    <section></section>
+    <section class="text-white">
+      <div
+        id="container"
+        class="flex container mx-auto pt-[6rem] space-x-[10rem] leading-8"
+      >
+        <div id="col-1" class="pl-[14rem]">
+          <div id="work-exp" class="max-w-xs">
+            <h2 class="text-xl font-semibold">Work experience💼</h2>
+            <p class="font-thin text-lg mt-4">Freelance</p>
+            <p class="font-extralight text-gray">Digital Product Designer</p>
+            <span class="font-extralight text-gray">Aug 2018 – Present</span>
+            <!-- ----- -->
+            <p class="font-thin text-lg mt-4">Marbleflows 🇫🇮 </p>
+            <p class="font-extralight text-gray">Digital Product Designer</p>
+            <span class="font-extralight text-gray">Feb 2022 – Aug 2022</span>
+
+            <!-- ----- -->
+            <p class="font-thin text-lg mt-4">ANKA 🇨🇮 </p>
+            <p class="font-extralight text-gray">User Experience Designer</p>
+            <span class="font-extralight text-gray">Jan 2021 – Dec 2021</span>
+
+            <!-- ----- -->
+            <p class="font-thin text-lg mt-4">Afiewura 🇬🇭 </p>
+            <p class="font-extralight text-gray">UX/UI Designer</p>
+            <span class="font-extralight text-gray">Apr 2019 – May 2020</span>
+          </div>
+
+          <div id="education">
+            <h2 class="text-xl font-medium mt-6">Education🎓</h2>
+            <p class="font-thin mt-4 text-lg">Interaction Design Foundation</p>
+            <span class="text-gray font-extralight"
+              >User Experience Design</span
+            >
+
+            <!-- ------ -->
+            <p class="font-thin mt-4 text-lg">German-IBT</p>
+            <span class="text-gray font-extralight"
+              >Human-Centred User Interface Design</span
+            >
+
+            <!-- ------ -->
+            <p class="font-thin mt-4 text-lg">Takoradi Technical University</p>
+            <span class="text-gray font-extralight"
+              >Electrical/Electronic Engineering</span
+            >
+          </div>
+
+          <div id="mentions">
+            <h2 class="text-xl font-medium mt-6">Mentions 🔗</h2>
+            <p class="text-gray font-extralight mt-4 underline">
+              <a href="">Tech training in high schools</a>
+            </p>
+            <p class="text-gray font-extralight underline">
+              <a href="">Shaping innovation in Ghana</a>
+            </p>
+          </div>
+        </div>
+
+        <div id="col-2" class="max-w-xs">
+          <h2 class="text-xl font-medium">Skills👨🏾‍💻</h2>
+          <p class="font-extralight text-gray mt-4">
+            User Experience Design, Analytical skills, Sketching / Wireframing,
+            User-Flows, Personas , User Journeys , Usability Testing, A/B
+            Testing, Visual Design, Interactive Prototyping.
+          </p>
+
+          <!-- ------ -->
+          <h2 class="text-xl font-medium mt-6">Tools🛠️</h2>
+          <p class="font-extralight text-gray mt-4">
+            Pencil and paper, Whimsical, Figma, Adobe XD, Miro, Notion, Zeplin
+          </p>
+
+          <!-- ------ -->
+          <h2 class="text-xl font-medium mt-6">Tech 👨🏾‍💻</h2>
+          <p class="font-extralight text-gray mt-4">HTML , CSS, Ruby/ Rails</p>
+
+          <!-- ------ -->
+          <h2 class="text-xl font-medium mt-6">Listening 🎧</h2>
+         <p class="font-extralight text-gray mt-4 underline"><a href="">From my fav artistes- Playlist</a</p> 
+          <p class="font-extralight text-gray underline"><a href="">Curated songs from my visit in Lome🇹🇬</a>
+          </p>
+          
+          <!-- ------ -->
+          <h2 class="text-xl font-medium mt-6">Reading 📚</h2>
+          <p class="font-extralight text-gray mt-4">Don’t Make Me Think, Revisited- Steve Krug</p>
+          <p class="font-extralight text-gray">UX Strategy- Jaime Levy</p>
+
+          <h2 class="text-xl font-medium mt-6">Courses🎓</h2>
+          <p class="font-extralight text-gray mt-4">Google UX Design Certificate</p>
+        </div>
+      </div>
+    </section>
+
+
+    <section id="divider">
+      <div class="container mx-auto py-[6rem]">
+        <hr class="text-gray w-[1024px] text-center mx-auto">
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="pb-[10rem]">
+      <div class="container mx-auto flex align-middle justify-center flex-col h-auto">
+        <h1 class="text-white text-[4.5rem] font-bold mx-auto">Let's Connect</h1>
+        <p class="text-gray text-xl font-thin mx-auto mt-2"> Got any opportunities? or just <span class="text-yellowish underline"> say hi</span> 👋</p>
+      </div>
+      <div class="container mx-auto flex align-middle justify-center mt-14 space-x-6 cursor-pointer">
+        <img src="Assets/linkedin.svg" alt="Linkedin">
+        <img src="Assets/github.svg" alt="Github">
+        <img src="Assets/twitter.svg" alt="Twitter">
+        <img src="Assets/insta.svg" alt="Instagram">
+        <img src="Assets/blog.svg" alt="Blog">
+      </div>
+    </footer>
   </body>
 </html>
