--- a/works.html
+++ b/works.html
@@ -19,10 +19,10 @@
         <a href="index.html">Derrick Amenuve</a> 
       </div>
       <div id="menu" class="text-xl space-x-5">
-        <a href="" class="font-extralight hover:text-yellowish">About</a>
-        <a href="" class="font-extralight hover:text-yellowish visited:text-yellowish">Works</a>
-        <a href="" class="font-extralight hover:text-yellowish">Teaching</a>
-        <a href="" class="font-extralight hover:text-yellowish">Contact</a>
+        <a href="about.html" class="font-extralight hover:text-yellowish">About</a>
+        <a href="works.html" class="font-extralight hover:text-yellowish visited:text-yellowish">Works</a>
+        <a href="teach.html" class="font-extralight hover:text-yellowish">Teaching</a>
+        <a href="contact.html" class="font-extralight hover:text-yellowish">Contact</a>
       </div>
     </nav>
 
