--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       class="bg-dark mx-auto text-white flex justify-between px-[25rem] py-8 items-center"
     >
       <div id="logo" class="font-semibold text-3xl cursor-pointer">
-        Derrick Amenuve
+        <a href="index.html">Derrick Amenuve</a>
       </div>
       <div id="menu" class="text-xl space-x-5">
         <a href="about.html" class="font-extralight hover:text-yellowish"
@@ -28,8 +28,14 @@
         <a href="works.html" class="font-extralight hover:text-yellowish"
           >Works</a
         >
-        <a href="" class="font-extralight hover:text-yellowish">Teaching</a>
-        <a href="" class="font-extralight hover:text-yellowish">Contact</a>
+        <a href="teach.html" class="font-extralight hover:text-yellowish"
+          >Teaching</a
+        >
+        <a
+          href="contact.html"
+          class="font-extralight hover:text-yellowish visited:text-yellowish"
+          >Contact</a
+        >
       </div>
     </nav>
 
