--- a/contact.html
+++ b/contact.html
@@ -15,41 +15,80 @@
   </head>
   <body class="font-poppins bg-dark">
     <!-- Navbar -->
-    <nav
-      class="bg-dark mx-auto text-white flex justify-between px-[25rem] py-8 items-center"
-    >
-      <div id="logo" class="font-semibold text-3xl cursor-pointer">
-        <a href="index.html">Derrick Amenuve</a>
+    <nav>
+      <div
+        class="bg-dark mx-auto text-white flex justify-between xl:justify-between px-[25rem] py-8 items-center sm:px-8 md:px-10 xl:px-[15rem]"
+      >
+        <div
+          id="logo"
+          class="font-semibold lg:text-3xl cursor-pointer sm:text-xl sm:py-2 md:text-xl"
+        >
+          <a href="index.html">Derrick Amenuve</a>
+        </div>
+
+        <div id="menu-links" class="text-xl space-x-5 sm:hidden md:flex">
+          <a href="about.html" class="font-extralight hover:text-yellowish"
+            >About</a
+          >
+          <a href="works.html" class="font-extralight hover:text-yellowish"
+            >Works</a
+          >
+          <a href="teach.html" class="font-extralight hover:text-yellowish"
+            >Teaching</a
+          >
+          <a
+            href="contact.html"
+            class="font-extralight hover:text-yellowish visited:text-yellowish"
+            >Contact</a
+          >
+        </div>
+
+        <div id="menu" class="relative lg:hidden md:hidden">
+          <svg
+            fill="#ffffff"
+            width="40px"
+            height=""
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M3.5,7 C3.22385763,7 3,6.77614237 3,6.5 C3,6.22385763 3.22385763,6 3.5,6 L20.5,6 C20.7761424,6 21,6.22385763 21,6.5 C21,6.77614237 20.7761424,7 20.5,7 L3.5,7 Z M3.5,12 C3.22385763,12 3,11.7761424 3,11.5 C3,11.2238576 3.22385763,11 3.5,11 L20.5,11 C20.7761424,11 21,11.2238576 21,11.5 C21,11.7761424 20.7761424,12 20.5,12 L3.5,12 Z M3.5,17 C3.22385763,17 3,16.7761424 3,16.5 C3,16.2238576 3.22385763,16 3.5,16 L20.5,16 C20.7761424,16 21,16.2238576 21,16.5 C21,16.7761424 20.7761424,17 20.5,17 L3.5,17 Z"
+            />
+          </svg>
+        </div>
       </div>
-      <div id="menu" class="text-xl space-x-5">
-        <a href="about.html" class="font-extralight hover:text-yellowish"
+
+      <div
+        id="mobile"
+        class="text-xl space-x-5 text-white flex-col text-center hidden py-4 mx-[5rem] space-y-2 lg:hidden md:hidden"
+      >
+        <a href="about.html" class="font-light hover:text-yellowish ml-5"
           >About</a
         >
-        <a href="works.html" class="font-extralight hover:text-yellowish"
-          >Works</a
-        >
-        <a href="teach.html" class="font-extralight hover:text-yellowish"
+        <a href="works.html" class="font-light hover:text-yellowish">Works</a>
+        <a href="teach.html" class="font-light hover:text-yellowish"
           >Teaching</a
         >
-        <a
-          href="contact.html"
-          class="font-extralight hover:text-yellowish visited:text-yellowish"
+        <a href="contact.html" class="font-light hover:text-yellowish"
           >Contact</a
         >
       </div>
     </nav>
-
     <section>
       <div
-        class="container mx-auto flex justify-center flex-col align-middle pt-[8.5rem]"
+        class="container mx-auto flex justify-center flex-col align-middle lg:mt-[8.5rem] sm:pt-[3rem]"
       >
-        <h1 class="text-white text-[3.2rem] font-normal mx-auto">
+        <h1
+          class="text-white lg:text-[3.2rem] font-normal mx-auto sm:text-[2.5rem] sm:text-center"
+        >
           Hey 👋🏾, I’ll love to hear from you
         </h1>
-        <p class="text-gray text-2xl font-light mx-auto pt-5">
+        <p class="text-gray lg:text-2xl font-light mx-auto pt-5 sm:text-xl">
           we can work together, chit chat, grab a coffee ☕️ or eat fufu 🍲
         </p>
-        <div class="text-yellowish mx-auto space-x-6 pt-9 text-2xl">
+        <div
+          class="text-yellowish mx-auto space-x-6 pt-9 lg:text-2xl sm:text-xl"
+        >
           <a href="" class="underline">Email</a>
           <a href="" class="underline">Linkedin</a>
           <a href="" class="underline">Twitter</a>
@@ -57,5 +96,7 @@
         </div>
       </div>
     </section>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
