Added external links

--- a/contact.html
+++ b/contact.html
@@ -89,10 +89,18 @@
         <div
           class="text-yellowish mx-auto space-x-6 pt-9 lg:text-2xl sm:text-xl"
         >
-          <a href="" class="underline">Email</a>
-          <a href="" class="underline">Linkedin</a>
-          <a href="" class="underline">Twitter</a>
-          <a href="" class="underline">Instagram</a>
+          <a href="mailto:derrickamenuve@gmail.com" class="underline">Email</a>
+          <a
+            href="https://www.linkedin.com/in/derrickamenuve/?original_referer=https%3A%2F%2Fux-portfolio-ruby-ytcp.vercel.app%2F"
+            class="underline"
+            >Linkedin</a
+          >
+          <a href="https://twitter.com/godsloveady/" class="underline"
+            >Twitter</a
+          >
+          <a href="https://www.instagram.com/godsloveady/" class="underline"
+            >Instagram</a
+          >
         </div>
       </div>
     </section>
