--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         <p class="text-white lg:text-2xl text-left leading-9 sm:text-xl sm:px-9">
           I’m a product designer ‍👨🏾‍💻️ & failed entrepreneur 📉 based in Accra
           🇬🇭. Currently open to new opportunities. Previously, I designed
-          <span class="text-yellowish">Marbleflows’ </span>first SaaS app &
+        <a href="https://www.marbleflows.com/"><span class="text-yellowish">Marbleflows’ </span></a>  first SaaS app &
           designed digital products at
-          <span class="text-yellowish">ANKA, Kauri, Afiewura</span> and other
+        <a class="text-yellowish" href="https://www.anka.africa/">ANKA, <a class="text-yellowish" href="https://www.kauriafrica.com/">Kauri</a>, </a>  <a class="text-yellowish" href="https://afiewura.com/">Afiewura</a> and other
           companies.Aside from design, I enjoy listening to music, talking to
           people and travelling. People say I’m dedicated and fun to work with.
-          Want to work with me?<span class="text-yellowish"> Say hi</span> 
+          Want to work with me? <a class="text-yellowish" href="derrickamenuve@gmail.com">Say hi</a> 
         </p>
       </div>
     </section>
@@ -135,7 +135,7 @@
             </p>
             <a
               class="flex mt-6 font-thin text-xl text-yellowish underline"
-              href="#"
+              href="https://www.vizitorslog.com/"
               >Visit site<span
                 ><img src="assets/link_arrow.svg" alt="" /></span
             ></a>
@@ -180,7 +180,7 @@
             </p>
             <a
               class="flex mt-6 font-thin text-xl text-yellowish underline"
-              href="#"
+              href="https://www.anka.africa/"
               >Visit website<span
                 ><img src="assets/link_arrow.svg" alt="" /></span
             ></a>
@@ -202,7 +202,7 @@
             </p>
             <a
               class="flex mt-6 font-thin text-xl text-yellowish underline"
-              href="#"
+              href="https://www.tailorsnote.com/"
               >Download application<span
                 ><img src="assets/link_arrow.svg" alt="" /></span
             ></a>
@@ -222,14 +222,15 @@
     <footer class="pb-[10rem]">
       <div class="container mx-auto flex items-center justify-center flex-col h-auto">
         <h1 class="text-white lg:text-[4.5rem] font-bold mx-auto sm:text-[3rem]">Let's Connect</h1>
-        <p class="text-gray text-xl font-thin mx-auto mt-2"> Got any opportunities? or just <span class="text-yellowish underline"> say hi</span> 👋</p>
+        <p class="text-gray text-xl font-thin mx-auto mt-2"> Got any opportunities? or just <a href="mailto:derrickamenuve@gmail.com"><span class="text-yellowish underline"> say hi</span></a>  👋</p>
       </div>
       <div class="container mx-auto flex align-middle justify-center mt-14 space-x-6 cursor-pointer">
-        <img src="Assets/linkedin.svg" alt="Linkedin">
-        <img src="Assets/github.svg" alt="Github">
-        <img src="Assets/twitter.svg" alt="Twitter">
-        <img src="Assets/insta.svg" alt="Instagram">
-        <img src="Assets/blog.svg" alt="Blog">
+       <a href="https://www.linkedin.com/in/derrickamenuve/?original_referer=https%3A%2F%2Fux-portfolio-ruby-ytcp.vercel.app%2F"><img src="Assets/linkedin.svg" alt="Linkedin"></a>
+       <a href="https://github.com/Derrickvibe"><img src="Assets/github.svg" alt="Github"></a> 
+       <a href="https://twitter.com/godsloveady/"><img src="Assets/twitter.svg" alt="Twitter"></a> 
+       <a href="https://www.instagram.com/godsloveady/"><img src="Assets/insta.svg" alt="Instagram"></a> 
+       <a href="https://dev.to/godsloveady"><img src="Assets/blog.svg" alt="Blog"></a>  
+       
       </div>
     </footer>
     
