--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
           assistant, also started a food business which I failed to scale. I
           then decided to learn a new skill and transitioned to Digital Product
           Design and Web development. <br />
-          <span class="underline">Read more about my journey ​</span>
+         <a href="https://ambitious.com.gh/my-life-after-uni-i-worked-for-hopin-academy-in-tamale-and-i-got-that-job-on-whatsapp-derrick-amenuve/"><span class="underline">Read more about my journey ​</span></a> 
         </p>
       </div>
     </section>
@@ -99,9 +99,9 @@
     <section class="text-white">
       <div
         id="container"
-        class="lg:flex lg:flex-row container mx-auto lg:pt-[6rem] lg:space-x-[10rem] leading-8 sm:flex-col sm:pt-[1.2rem]"
+        class="lg:flex lg:flex-row container mx-auto lg:pt-[6rem]  leading-8 sm:flex-col sm:pt-[1.2rem]"
       >
-        <div id="col-1" class="lg:pl-[14rem] sm:pl-6">
+        <div id="col-1" class="sm:pl-6 mx-auto">
           <div id="work-exp" class="max-w-xs">
             <h2 class="text-xl font-semibold">Work experience💼</h2>
             <p class="font-thin text-lg mt-4">Freelance</p>
@@ -146,15 +146,15 @@
           <div id="mentions">
             <h2 class="text-xl font-medium mt-6">Mentions 🔗</h2>
             <p class="text-gray font-extralight mt-4 underline">
-              <a href="">Tech training in high schools</a>
+              <a href="https://3news.com/students-of-peki-shs-sec-tech-trained-in-entrepreneurial-skills/">Tech training in high schools</a>
             </p>
             <p class="text-gray font-extralight underline">
-              <a href="">Shaping innovation in Ghana</a>
+              <a href="https://wiforum.org/ghana/">Shaping innovation in Ghana</a>
             </p>
           </div>
         </div>
 
-        <div id="col-2" class="lg:max-w-xs sm:pl-6 sm:mt-6 lg:mt-[0.2rem]">
+        <div id="col-2" class="lg:max-w-xs sm:pl-6 sm:mt-6 lg:mt-[0.2rem] mx-auto">
           <h2 class="text-xl font-medium">Skills👨🏾‍💻</h2>
           <p class="font-extralight text-gray mt-4">
             User Experience Design, Analytical skills, Sketching / Wireframing,
@@ -174,8 +174,8 @@
 
           <!-- ------ -->
           <h2 class="text-xl font-medium mt-6">Listening 🎧</h2>
-         <p class="font-extralight text-gray mt-4 underline"><a href="">From my fav artistes- Playlist</a</p> 
-          <p class="font-extralight text-gray underline"><a href="">Curated songs from my visit in Lome🇹🇬</a>
+         <p class="font-extralight text-gray mt-4 underline"><a href="https://open.spotify.com/playlist/6iCu07rAGS1pPcv5eZxsPa?si=037ff68174e24fab&nd=1">From my fav artistes- Playlist</a</p> 
+          <p class="font-extralight text-gray underline"><a href="https://music.apple.com/gh/playlist/francophone-vibes/pl.u-JPAZEDJuLa6qL2q">Curated songs from my visit in Lome🇹🇬</a>
           </p>
           
           <!-- ------ -->
@@ -200,14 +200,15 @@
     <footer class="pb-[10rem]">
       <div class="container mx-auto flex items-center justify-center flex-col h-auto">
         <h1 class="text-white lg:text-[4.5rem] font-bold mx-auto sm:text-[3rem]">Let's Connect</h1>
-        <p class="text-gray text-xl font-thin mx-auto mt-2"> Got any opportunities? or just <span class="text-yellowish underline"> say hi</span> 👋</p>
+        <p class="text-gray text-xl font-thin mx-auto mt-2"> Got any opportunities? or just <a href="mailto:derrickamenuve@gmail.com"><span class="text-yellowish underline"> say hi</span></a>  👋</p>
       </div>
       <div class="container mx-auto flex align-middle justify-center mt-14 space-x-6 cursor-pointer">
-        <img src="Assets/linkedin.svg" alt="Linkedin">
-        <img src="Assets/github.svg" alt="Github">
-        <img src="Assets/twitter.svg" alt="Twitter">
-        <img src="Assets/insta.svg" alt="Instagram">
-        <img src="Assets/blog.svg" alt="Blog">
+       <a href="https://www.linkedin.com/in/derrickamenuve/?original_referer=https%3A%2F%2Fux-portfolio-ruby-ytcp.vercel.app%2F"><img src="Assets/linkedin.svg" alt="Linkedin"></a>
+       <a href="https://github.com/Derrickvibe"><img src="Assets/github.svg" alt="Github"></a> 
+       <a href="https://twitter.com/godsloveady/"><img src="Assets/twitter.svg" alt="Twitter"></a> 
+       <a href="https://www.instagram.com/godsloveady/"><img src="Assets/insta.svg" alt="Instagram"></a> 
+       <a href="https://dev.to/godsloveady"><img src="Assets/blog.svg" alt="Blog"></a>  
+       
       </div>
     </footer>
 
