--- a/teach.html
+++ b/teach.html
@@ -77,7 +77,7 @@
 
     <section class="lg:pt-16 sm:pt-12">
       <div class="container text-white mx-auto">
-        <h1 class="lg:ml-[12rem] text-[4rem] font-bold sm:text-[2rem]">
+        <h1 class="lg:ml-[12rem] lg:text-[4rem] font-bold sm:text-[2rem]">
           Teaching
         </h1>
       </div>
@@ -98,9 +98,9 @@
     <section class="pt-[7rem]">
       <div
         id="card-container"
-        class="container flex mx-auto lg:space-x-10 sm:flex-col sm:justify-center"
+        class="container flex mx-auto sm:flex-col sm:justify-center lg:flex-row"
       >
-        <div id="card" class="lg:ml-[12rem] sm:mx-auto">
+        <div id="card" class="mx-auto">
           <div id="card-image">
             <img src="Assets/rails.png" alt="" />
           </div>
@@ -118,7 +118,7 @@
           </div>
         </div>
 
-        <div id="card" class="sm:mx-auto sm:mt-6">
+        <div id="card" class="mx-auto sm:mt-6 lg:mt-0">
           <div id="card-image">
             <img src="Assets/design.png" alt="" />
           </div>
@@ -137,7 +137,7 @@
           </div>
         </div>
 
-        <div id="card" class="sm:mx-auto sm:mt-6">
+        <div id="card" class="mx-auto sm:mt-6 lg:mt-0">
           <div id="card-image">
             <img src="Assets/peki.png" alt="" />
           </div>
@@ -176,17 +176,31 @@
         </h1>
         <p class="text-gray text-xl font-thin mx-auto mt-2">
           Got any opportunities? or just
-          <span class="text-yellowish underline"> say hi</span> 👋
+          <a href="mailto:derrickamenuve@gmail.com"
+            ><span class="text-yellowish underline"> say hi</span></a
+          >
+          👋
         </p>
       </div>
       <div
         class="container mx-auto flex align-middle justify-center mt-14 space-x-6 cursor-pointer"
       >
-        <img src="Assets/linkedin.svg" alt="Linkedin" />
-        <img src="Assets/github.svg" alt="Github" />
-        <img src="Assets/twitter.svg" alt="Twitter" />
-        <img src="Assets/insta.svg" alt="Instagram" />
-        <img src="Assets/blog.svg" alt="Blog" />
+        <a
+          href="https://www.linkedin.com/in/derrickamenuve/?original_referer=https%3A%2F%2Fux-portfolio-ruby-ytcp.vercel.app%2F"
+          ><img src="Assets/linkedin.svg" alt="Linkedin"
+        /></a>
+        <a href="https://github.com/Derrickvibe"
+          ><img src="Assets/github.svg" alt="Github"
+        /></a>
+        <a href="https://twitter.com/godsloveady/"
+          ><img src="Assets/twitter.svg" alt="Twitter"
+        /></a>
+        <a href="https://www.instagram.com/godsloveady/"
+          ><img src="Assets/insta.svg" alt="Instagram"
+        /></a>
+        <a href="https://dev.to/godsloveady"
+          ><img src="Assets/blog.svg" alt="Blog"
+        /></a>
       </div>
     </footer>
 
